--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Блог блондинки</h1>
     <img src="images/avatar1.jpg" alt="Моё тестовое изображение">
     <h2>Блог блондинки, которая учится кодить</h2>
+    <p>Хочу научиться кодить</p>
 </body>
 
 </html>
